monitoring/grafana/ingress.http.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-http
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: monitoring-redirect@kubernetescrd
spec:
  rules:
    - host: grafana.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  name: http
